images are updated
images re updated

--- a/gallery.html
+++ b/gallery.html
@@ -110,39 +110,115 @@
                         </div>
                     </div>
                 </div>
+                <!-- First Row-->
                 <div class="row mt-5">
-                <div class="col-lg-4">
-                    <div class="mt-3">
-                        <img src="images/gallery/2.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                    </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/2.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/3.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/4.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="mt-3">
-                        <img src="images/gallery/3.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="mt-3">
-                        <img src="images/gallery/4.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                    </div>
-                </div>
-                </div>
+                <!-- Second Row-->
                 <div class="row mt-5">
-                <div class="col-lg-4">
-                    <div class="mt-3">
-                        <img src="images/gallery/5.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                    </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/5.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/6.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/7.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="mt-3">
-                        <img src="images/gallery/6.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                    </div>
+                <!-- 3rd Row--> 
+                <div class="row mt-5">
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/library1.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/library3.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/library4.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="mt-3">
-                        <img src="images/gallery/7.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
-                    </div>
+                <!-- fourth Row--> 
+                <div class="row mt-5">
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/library5.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/library6.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/majalis2.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
                 </div>
+
+                <!-- 5th Row--> 
+                <div class="row mt-5">
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/majalis3.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/majalis4.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/medical.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                </div>
+
+                <!-- 5th Row--> 
+                <div class="row mt-5">
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/medical-1.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/wazoo.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="mt-3">
+                          <img src="images/gallery/masjid1.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                      </div>
+                  </div>
                 </div>
             </div>
         </section>
