upcoming page is updated

--- a/upcoming.html
+++ b/upcoming.html
@@ -121,9 +121,9 @@
                               </a>
                            </div>
                           <div class="content_blog pt-3 pb-3">
-                              <h5 class="font-weight-bold mb-0">Contrary to popular belief</h5>
+                              <h5 class="font-weight-bold mb-0">Jashn-e-Wiladat Imam Hassan Askari AS</h5>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted ">Sit sagittis vulputate laoreet sodales tortor nulla lobortis bibendum netus primis fames. Lobortis ultricies.</p>
+                                  <p class="mt-3 desc_blog text-muted ">Molana Syed Muzamil Hussain Naqvi theek 7 bajy shab khitab farmayen gy.</p>
                               </div>
                           </div>
                       </div>
@@ -137,10 +137,10 @@
                           </div>
                           <div class="content_blog pt-3 pb-3">
                               <div>
-                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Contrary to popular belief</a></h5>
+                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Majlis Barsi Braye Isalo Swab Syed Shokat Hussain Ibne Syed Arid Hussain</a></h5>
                               </div>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted">Sit sagittis vulputate laoreet sodales tortor nulla lobortis bibendum netus primis fames. Lobortis ultricies.</p>
+                                  <p class="mt-3 desc_blog text-muted">Molana Syed Muzamil Hussain Naqvi theek 7 bajy shab khitab farmayen gy.</p>
                               </div>
                           </div>
                       </div>
@@ -154,10 +154,10 @@
                           </div>
                           <div class="content_blog pt-3 pb-3">
                               <div>
-                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Lorem Ipsum is not simply</a></h5>
+                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Jashne Sadqain</a></h5>
                               </div>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted">Sit sagittis vulputate laoreet sodales tortor nulla lobortis bibendum netus primis fames. Lobortis ultricies.</p>
+                                  <p class="mt-3 desc_blog text-muted">Molana Syed Ali Muhammad Naqvi, Molana Haider Alvi thek 7 bjyshb khitab farmayen gy.</p>
                               </div>
                           </div>
                       </div>
@@ -165,16 +165,16 @@
                   <div class="col-lg-3 mt-3">
                       <div class="rounded bg-white p-2">
                           <div class="img_blog">
-                              <a href="images/blog/blog-1.jpg" id="pop" class="image-popup-vertical-fit">
-                               <img src="images/blog/blog-1.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
+                              <a href="images/blog/blog-4.jpg" id="pop" class="image-popup-vertical-fit">
+                               <img src="images/blog/blog-4.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
                               </a>
                           </div>
                           <div class="content_blog pt-3 pb-3">
                               <div>
-                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Lorem Ipsum is not simply</a></h5>
+                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Khamsa Majalis(3-8)Rabiul Awal</a></h5>
                               </div>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted">Sit sagittis vulputate laoreet sodales tortor nulla lobortis bibendum netus primis fames. Lobortis ultricies.</p>
+                                  <p class="mt-3 desc_blog text-muted">Allama Arif Hussain Kazmi 8 bjy shb khitab farmaye gy.</p>
                               </div>
                           </div>
                       </div>
