upcoming section is updated

--- a/home.html
+++ b/home.html
@@ -344,9 +344,9 @@
                                 </a>
                              </div>
                             <div class="content_blog pt-3 pb-3">
-                                <h5 class="font-weight-bold mb-0">Khamsa Majalis(3-8)Rabiul awal</h5>
+                                <h5 class="font-weight-bold mb-0">Jashn-e-Wiladat Imam Hassan Askari AS</h5>
                                 <div class="mt-3">
-                                    <p class="mt-3 desc_blog text-muted ">Allama Arif Hussain Kazmi 8 bjy shb khitab farmaye gy.</p>
+                                    <p class="mt-3 desc_blog text-muted ">Molana Syed Muzamil Hussain Naqvi theek 7 bajy shab khitab farmayen gy.</p>
                                 </div>
                             </div>
                         </div>
