images extensions are updated

--- a/gallery.html
+++ b/gallery.html
@@ -114,17 +114,17 @@
                 <div class="row mt-5">
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/2.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/2.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/3.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/3.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/4.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/4.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                 </div>
@@ -132,21 +132,21 @@
                 <div class="row mt-5">
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/5.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/5.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/6.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/6.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/7.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/7.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                 </div>
-                <!-- 3rd Row--> 
+                <!-- 3rd Row-->
                 <div class="row mt-5">
                   <div class="col-lg-4">
                       <div class="mt-3">
@@ -164,7 +164,7 @@
                       </div>
                   </div>
                 </div>
-                <!-- fourth Row--> 
+                <!-- fourth Row-->
                 <div class="row mt-5">
                   <div class="col-lg-4">
                       <div class="mt-3">
@@ -183,7 +183,7 @@
                   </div>
                 </div>
 
-                <!-- 5th Row--> 
+                <!-- 5th Row-->
                 <div class="row mt-5">
                   <div class="col-lg-4">
                       <div class="mt-3">
@@ -197,21 +197,21 @@
                   </div>
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/medical.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/medical.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                 </div>
 
-                <!-- 5th Row--> 
+                <!-- 5th Row-->
                 <div class="row mt-5">
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/medical-1.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/medical-1.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                   <div class="col-lg-4">
                       <div class="mt-3">
-                          <img src="images/gallery/wazoo.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                          <img src="images/gallery/wazoo.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                   <div class="col-lg-4">
