--- a/girls-school.html
+++ b/girls-school.html
@@ -107,7 +107,7 @@
                 <div class="row bg">
                   <div class="col-lg-4">
                       <div class="mt-4">
-                        <img src="images/gallery/7.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                        <img src="images/gallery/7.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                       </div>
                   </div>
                     <div class="col-lg-8">
