--- a/maghsal.html
+++ b/maghsal.html
@@ -107,7 +107,7 @@
               <div class="row bg">
               <div class="col-lg-4">
                 <div class="mt-4">
-                <img src="images/gallery/maghsal.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                <img src="images/gallery/maghsal.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
               </div>
               </div>
               <div class="col-lg-8">
