text changes are added

--- a/library.html
+++ b/library.html
@@ -115,7 +115,7 @@
                         <div class="mt-4">
                             <h5 class="mb-0">Library</h5>
                             <div class="services-title-border"></div>
-                            <p class="text-muted mt-3">There is a separate academic block in the Complex. The block houses a well furnished and stocked library.  The library already has over 16,000 books. A professional librarian and Assistant Librarian manage the library on modern lines and a committee headed by a senior trustee directly oversees the library. A number of men and women use the library on regular basis. There are programs ad exhibitions that are designed and implemented for related activities. Library also comprises a research room that is well equipped with necessary facilities. (Pic of library, after each facility give pics of that facility/section) </p>
+                            <p class="text-muted mt-3">There is a separate academic block in the Complex. The block houses a well furnished and stocked library.  The library already has over 16,000 books. A professional librarian and Assistant Librarian manage the library on modern lines and a committee headed by a senior trustee directly oversees the library. A number of men and women use the library on regular basis. There are programs ad exhibitions that are designed and implemented for related activities. Library also comprises a research room that is well equipped with necessary facilities.</p>
                         </div>
                     </div>
                 </div>
