--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@ Minutes of all meetings are recorded and documented.  All trustees attend the me
                         <div class="mt-4 bg">
                             <h5 class="mb-0">Staff</h5>
                             <div class="services-title-border"></div>
-                            <p class="text-muted mt-3">Under the supervision of Chairman a workforce of 25 full  time paid personnel works in the complex that include Manager, Assistant Manager, Accountant, Librarians, Security Supervisor, Guards, Khadmin, Gardner and some part timers like electrician, plumber etc
+                            <p class="text-muted mt-3">Under the supervision of Chairman a workforce of 25 full  time paid personnel works in the complex that include Manager, Assistant Manager, Accountant, Librarians, Security Supervisor, Guards, Khadmin, Gardner and some part timers like electrician, plumber etc.
 All financial transactions are documented properly and accounts are regularly audited by a private sector firm of chartered accountants.</p>
                         </div>
                     </div>
