--- a/home.html
+++ b/home.html
@@ -334,24 +334,24 @@
                     </div>
                 </div>
                 <div class="row mt-2">
-                    <div class="col-lg-4">
-                    </div>
                     <div class="col-lg-3">
+                    </div>
+                    <div class="col-lg-6">
                         <div class="rounded bg-white p-2">
-                            <div class="img_blog">
+                            <!-- <div class="img_blog">
                                 <a href="images/blog/blog-1.jpg" id="pop" class="image-popup-vertical-fit">
                                  <img src="images/blog/blog-1.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
                                 </a>
-                             </div>
+                             </div> -->
                             <div class="content_blog pt-3 pb-3">
-                                <h5 class="font-weight-bold mb-0">Jashn-e-Wiladat Imam Hassan Askari AS</h5>
+                                <h5 class="font-weight-bold mb-0 text-center">Milad Masood 4 Jamidul Awal Hazrat Zainab SA</h5>
                                 <div class="mt-3">
-                                    <p class="mt-3 desc_blog text-muted ">Molana Syed Muzamil Hussain Naqvi theek 7 bajy shab khitab farmayen gy.</p>
+                                    <p class="mt-3 desc_blog text-muted "></p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                 </div>
             </div>
         </section>
