--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                   </div>
               </div>
               <div class="row">
-                  <div class="col-lg-4">
+                  <div class="col-lg-3">
                       <div class="text-center">
                           <div>
                               <i class="fas fa-phone h1 g"></i>
@@ -124,7 +124,18 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-lg-4">
+				  	<div class="col-lg-3">
+                        <div class="text-center">
+                            <div>
+                              <i class="fas fa-envelope h1 g"></i>
+                            </div>
+                            <div class="mt-3">
+                                <h5 class="mb-0 contact_detail-title font-weight-bold black">alsadiqtrustislamabad@gmail.com</h5>
+                              
+                            </div>
+                        </div>
+                    </div>
+                  <div class="col-lg-3">
                       <div class="text-center">
                           <div>
                               <i class="fas fa-map-marker g h1"></i>
@@ -135,7 +146,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-lg-3">
                       <div class="text-center">
                           <ul class="list-unstyled list-inline mb-3">
                               <li class="list-inline-item"><a href="https://www.facebook.com/alsadiqtrust/"><i class="fab fa-facebook g h1"></i></a></li>
