--- a/home.html
+++ b/home.html
@@ -110,17 +110,17 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/header-bg.jpg" alt="First slide">
+                  <img class="d-block w-100" src="images/header-bg2.jpg" alt="First slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="images/header-bg2.jpg" alt="Second slide">
+                  <img class="d-block w-100" src="images/header-bg3.jpg" alt="Second slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="images/header-bg3.jpg" alt="Third slide">
+                  <img class="d-block w-100" src="images/header-bg.jpg" alt="Third slide">
                   <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">
                   </div>
                 </div>
@@ -416,7 +416,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="text-center">
                             <div>
                                 <i class="fas fa-phone h1 g"></i>
@@ -427,7 +427,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+					<div class="col-lg-3">
+                        <div class="text-center">
+                            <div>
+                              <i class="fas fa-envelope h1 g"></i>
+                            </div>
+                            <div class="mt-3">
+                                <h5 class="mb-0 contact_detail-title font-weight-bold black">alsadiqtrustislamabad@gmail.com</h5>
+                              
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
                         <div class="text-center">
                             <div>
                                 <i class="fas fa-map-marker g h1"></i>
@@ -438,7 +449,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="text-center">
                             <ul class="list-unstyled list-inline mb-3">
                                 <li class="list-inline-item"><a href="https://www.facebook.com/alsadiqtrust/"><i class="fab fa-facebook g h1"></i></a></li>
