--- a/home.html
+++ b/home.html
@@ -433,7 +433,7 @@
                               <i class="fas fa-envelope h1 g"></i>
                             </div>
                             <div class="mt-3">
-                                <h5 class="mb-0 contact_detail-title font-weight-bold black">alsadiqtrustislamabad@gmail.com</h5>
+                                <p class="mb-0 font-weight-bold black">alsadiqtrustislamabad@gmail.com</p>
                               
                             </div>
                         </div>
