financial page is added

--- a/home.html
+++ b/home.html
@@ -179,6 +179,7 @@
                     <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
+                              <i class="fas fa-mosque text-custom h2"></i>
                                 <h5 class="mb-0">Prayers /Majalis-o-Mahafil</h5>
                                 <div class="services-title-border"></div>
                                 <p class="text-muted mt-3">The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, etc.</p>
@@ -191,6 +192,7 @@
                     <div class="col-lg-4">
                       <div class="text-center services-boxes rounded p-4 mt-4 bg">
                           <div class="mt-4 bg">
+
                               <h5 class="mb-0">Maghsal</h5>
                               <div class="services-title-border"></div>
                               <p class="text-muted mt-3">The complex has a small but well planned and well-equipped facility for performing Ghusal of, etc.</p>
@@ -203,6 +205,7 @@
                     <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
+                              <i class="fas fa-book-open text-custom h2"></i>
                                 <h5 class="mb-0">Library</h5>
                                 <div class="services-title-border"></div>
                                 <p class="text-muted mt-3">There is a separate academic block in the Complex. The block houses a well furnished and stocked, etc.</p>
@@ -255,6 +258,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                  <div class="col-lg-4">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                            <div class="mt-4 bg">
+                                <i class="fas fa-money-check-alt text-custom h2"></i>
+                                <h5 class="mb-0">Financials</h5>
+                                <div class="services-title-border"></div>
+                                <p class="text-muted mt-3">Accounts of the trust are kept properly on a tailor-made software etc.</p>
+                            </div>
+                            <div class="text-center">
+                                <a href="financials.html" class="btn btn-custom">Read More!</a>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
             </div>
         </section>
         <!-- END SERVICES -->
@@ -434,7 +452,7 @@
                             </div>
                             <div class="mt-3">
                                 <p class="mb-0 font-weight-bold black">alsadiqtrustislamabad@gmail.com</p>
-                              
+
                             </div>
                         </div>
                     </div>
