medical page is added

--- a/calendar.html
+++ b/calendar.html
@@ -35,9 +35,9 @@
         <script src="https://kit.fontawesome.com/ce721e6ba8.js" crossorigin="anonymous"></script>
     </head>
 <style>
-table { 
-  width: 100%; 
-  border-collapse: collapse; 
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
 tbody tr td{
   padding: 10px !important;
@@ -88,6 +88,8 @@ tbody tr td{
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
+                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
+                        <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
                                 <li class="nav-item">
