--- a/home.html
+++ b/home.html
@@ -81,6 +81,8 @@
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
+                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
+                        <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
                       <li class="nav-item">
@@ -269,6 +271,19 @@
                             </div>
                             <div class="text-center">
                                 <a href="financials.html" class="btn btn-custom">Read More!</a>
+                            </div>
+                        </div>
+                    </div>
+                  <div class="col-lg-4">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                            <div class="mt-4 bg">
+                                <i class="fas fa-medkit text-custom h2"></i>
+                                <h5 class="mb-0">Medical Centre</h5>
+                                <div class="services-title-border"></div>
+                                <p class="text-muted mt-3">A medical Centre has also been established by Al-Sadiq Trust. An experienced  full time  Medical Doctor is employed who examines etc</p>
+                            </div>
+                            <div class="text-center">
+                                <a href="medical.html" class="btn btn-custom">Read More!</a>
                             </div>
                         </div>
                     </div>
