--- a/medical.html
+++ b/medical.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Prayers / Majalis-o-Mahafil</title>
+        <title>Medical</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="SKY" />
@@ -81,8 +81,8 @@
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
-<a class="dropdown-item" href="financials.html"><b>Financials</b></a>
-<a class="dropdown-item" href="medical.html"><b>Medical</b></a>
+                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
+                        <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
                                 <li class="nav-item">
@@ -107,20 +107,20 @@
         <section class="section bg-light1" id="services">
             <div class="container">
                 <div class="row bg">
-                    <div class="col-lg-4">
+                <div class="col-lg-4">
+                  <div class="mt-4">
+                  <img src="images/gallery/medical.JPG" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="text-center services-boxes rounded p-4 mt-4">
                         <div class="mt-4">
-                          <img src="images/gallery/prayer.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                            <h5 class="mb-0">Medical Centre</h5>
+                            <div class="services-title-border"></div>
+                            <p class="text-muted mt-3">A medical Centre has also been established by Al-Sadiq Trust. An experienced  full time  Medical Doctor is employed who examines   patients from 9 am to 1.00 pm daily  on a very nominal fee vouchure. Deserving patients are also provided with medicines that are  free of charge. Patients who are required to be examined by Medical specialists are referred to different medical specialists and Hospitals as well.</p>
                         </div>
                     </div>
-                        <div class="col-lg-8">
-                            <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                                <div class="mt-4 bg">
-                                    <h5 class="mb-0">Prayers / Majalis-o-Mahafil</h5>
-                                    <div class="services-title-border"></div>
-                                    <p class="text-muted mt-3">Prayer/Majalis-o-Mahafil Halls. The complex has two large halls (25,000 square feet) that serve as main premises for regular daily, juma, and eid prayers, majalis, milads, other mahafils, and aitkaf and iftar during Ramazn and housing “tabarrukat”. The halls are well furnished and equipped with audio-visual systems. There are adequate facilities both for separate and concurrent attendance of men and women.  Women participate in all prayers with due purdah considerations. There are functions the whole year round to mark all important events on the Islamic/shia calendar.  These activities peak during the month of Muharram. There are Aamaal, majalis, maatam, juloos, shab baidaries, niaz, and qirat events.</p>
-                                </div>
-                            </div>
-                        </div>
+                </div>
                 </div>
             </div>
         </section>
