--- a/financials.html
+++ b/financials.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Marriage Bureau</title>
+        <title>Financials</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="SKY" />
@@ -81,6 +81,8 @@
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
+                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
+                        <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
                                 <li class="nav-item">
