medical text is minimized

--- a/home.html
+++ b/home.html
@@ -280,7 +280,7 @@
                                 <i class="fas fa-medkit text-custom h2"></i>
                                 <h5 class="mb-0">Medical Centre</h5>
                                 <div class="services-title-border"></div>
-                                <p class="text-muted mt-3">A medical Centre has also been established by Al-Sadiq Trust. An experienced  full time  Medical Doctor is employed who examines etc</p>
+                                <p class="text-muted mt-3">A medical Centre has also been established by Al-Sadiq Trust etc</p>
                             </div>
                             <div class="text-center">
                                 <a href="medical.html" class="btn btn-custom">Read More!</a>
